--- a/works.html
+++ b/works.html
@@ -35,6 +35,10 @@
             <th>ゼミナールⅠ研究課題</th>
             <td>わかばちゃんと学ぶGit使い方入門</td>
           </tr>    
+          <tr>
+            <th>ゼミナールII研究課題</th>
+            <td>わかばちゃんと学ぶGit使い方入門</td>
+          </tr>    
         </tbody>
       </table>
     </div>
