work ゼミIIIを追加

--- a/works.html
+++ b/works.html
@@ -39,6 +39,10 @@
             <th>ゼミナールII研究課題</th>
             <td>わかばちゃんと学ぶGit使い方入門</td>
           </tr>    
+          <tr>
+            <th>ゼミナールIII研究課題</th>
+            <td>わかばちゃんと学ぶGit使い方入門</td>
+          </tr>    
         </tbody>
       </table>
     </div>
