わかばprofile_add test2

--- a/member.html
+++ b/member.html
@@ -43,6 +43,7 @@
         <h2>Research Student</h2>
         <img src="images/icon_wakaba.jpg" alt="わかば">
 	<p>test-test</p> 
+	<p>test-test2</p> 
       </div>
     </div>
 
